--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,106 @@
 body {
-  background-color: rgb(114, 114, 231);
-  color: red;
+  background-color: rgb(143, 143, 153);
 }
 .nav-bar{
-  
-  background: rgb(59, 12, 190);
-  height:30px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 50px;
+  border-radius: 0.5em;
+  padding: 5px;
+  padding-top:15px;
+  font-size: 30px;
+  font-family: 'Acme', sans-serif;
+  background-color: rgba(0, 7, 5, 0.945);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+}
+
+.searchBar{
+  margin-top: 30px;
   padding: 10px;
-  color: yellow;
-  font-size: large;
+  margin-left: 10%;
+  border-radius: 0.7em;
+  background-color:none;
+}
+.searchInput{
+  grid-area: s;
+  padding:5px;
+  font-family: 'Acme', serif;
+  border:none;
+  border-radius: 0.7rem;
+  width: 550px;
+  height: 40px;
+  font-size: 20px;
+}
+.search{
+  grid-area: i;
+  border: none;
+  background: none;
+  color: blue;
+  cursor: pointer;
+  font-size: 25px;
+}
+.searchOpt{
+  margin-left: 30%;
+}
+.title{
+  font-size: 20px;
+  border: none;
+  background: none;
+  cursor: grab;
+  font-family: 'Noto Serif', serif;
+}
+.tag{
+  font-size: 20px;
+  border: none;
+  background: none;
+  cursor: grab;
+  font-family: 'Noto Serif', serif;
+}
+.title:active{
+  cursor: grabbing;
+}
+.tag:active{
+  cursor: grabbing;
+}
+.putAnUnderline{
+  text-decoration:underline;
+  color: blue;
+  border: none;
+  background: none;
+  font-size: 20px;
+  cursor: grab;
+  font-family: 'Noto Serif', serif;
+}
+.topTenSearchTerms{
+  margin-left: 5%;
+  margin-top:10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  border: none;
+  background: none;
+  cursor: grab;
+  font-family: 'Noto Serif', serif;
 }
 #popUp-Box{
 height: fit-content;
-width:250px;
+width:220px;
 position: fixed;
-background-color: rgba(88, 88, 252, 0.842);
-left: 450px;
-padding: 50px;
-top: 200px;
-border-radius: 15px;
-margin: auto;
+background-color: black;
+left: 5%;
+padding: 10px;
+top: 33%;
+font-size: 20px;
+font-family: 'Noto Serif', serif;
+color: yellow;
+}
+.close{
+  margin-left: 93%;
+  cursor: pointer;
+
 }
 .postsContainer{
   margin-left: 30%;
